--- a/themes/hiswe-theme/sass/syntax.scss
+++ b/themes/hiswe-theme/sass/syntax.scss
@@ -48,7 +48,7 @@ figure.highlight {
   line-height: 1.6;
   overflow: auto;
   position: relative;
-  font-size: 0.9em;
+  font-size: 0.9rem;
 
   @media #{$mq-no-asides} {
     --margin-left-right: 0;
@@ -70,6 +70,7 @@ figure.highlight {
     border: none;
     padding: 0;
     margin: 0;
+    font-size: inherit;
   }
 
   table {
